--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aea-nrc-ss",
+  "name": "@andersea/nrc-ss",
   "version": "0.0.2",
   "description": "",
   "license": "MIT",
@@ -32,23 +32,23 @@
     "watch:test": "jest --watch"
   },
   "dependencies": {
-    "simple-statistics": "^5.0.0"
+    "simple-statistics": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "^20.0.5",
-    "@types/node": "^8.0.0",
-    "@types/node-red": "^0.17.0",
-    "coveralls": "^2.0.0",
+    "@types/node": "^8.10.15",
+    "@types/node-red": "^0.17.2",
+    "coveralls": "^2.13.3",
     "cpy-cli": "^1.0.1",
     "jest": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
-    "prettier": "^1.5.2",
+    "prettier": "^1.12.1",
     "rimraf": "^2.0.0",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
-    "tslint": "^5.0.0",
-    "tslint-config-prettier": "^1.1.0",
-    "typescript": "^2.3.0"
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.12.0",
+    "typescript": "^2.8.3"
   },
   "engines": {
     "node": ">=6.0.0"
